# openmp-project

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  sha1_suffix.cpp  sha1_suffix.h
